@@ -108,7 +108,11 @@ void idServerNetChanSystemLocal::NetchanEncode(client_t *client,
             index = 0;
         }
 
-        key ^= string[index] << (i & 1);
+        if(string[index] == '%') {
+            key ^= '.' << (i & 1);
+        } else {
+            key ^= string[index] << (i & 1);
+        }
 
         index++;
 
@@ -162,7 +166,11 @@ void idServerNetChanSystemLocal::NetchanDecode(client_t *client,
             index = 0;
         }
 
-        key ^= string[index] << (i & 1);
+        if(string[index] == '%') {
+            key ^= '.' << (i & 1);
+        } else {
+            key ^= string[index] << (i & 1);
+        }
 
         index++;
 
