@@ -735,6 +735,7 @@ void idServerSnapshotSystemLocal::BuildClientSnapshot(client_t *client) {
     //----(SA)  added for 'lean'
     // need to account for lean, so areaportal doors draw properly
 #if 0
+
     if(frame->ps.leanf != 0) {
         vec3_t right, v3ViewAngles;
 
