@@ -1,6 +1,8 @@
 2021-08-27 Dusan Jocic <dusanjocic@msn.com>
 	* [Authentication Server] Turned off "authStatus" until we get new PHP based website
 	* [Console] Turn off chatlog
+	* [Network] Do not allow communication of the '%' character.
+	* [Console] Do not execute reconnect command after explicit command
 
 2021-08-26 Dusan Jocic <dusanjocic@msn.com>
 	* [Cumulative Update] Misc changes
